--- a/pieraksts/templates/cancel.html
+++ b/pieraksts/templates/cancel.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="row">
 {% if disable_cancel == True %}
-  <h2 style="text-align:center; margin-top:5px;"><b>Nav iespējams atcelt nodarbību vēlāk kā 2 stundas pirms tās sākuma!</b></h2>
+  <h2 style="text-align:center; margin-top:5px;"><b>Nav iespējams atcelt nodarbību vēlāk kā 1 stundu pirms tās sākuma!</b></h2>
 {% else %}
   <h2 style="text-align:center; margin-top:5px;"><b>Vai tiešām vēlaties atcelt pierakstu uz:</b></h2>
 {% endif %}
