--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,8 @@
 <style>body{ -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; background: black !important; }{% block style %}{% endblock %}</style>
 </head>
 <body>
-<div class="container-fluid" style="margin-top:8px;"><div class="col-lg-6 col-md-8 col-sm-8 col-xs-12 col-lg-offset-3 col-md-offset-2 col-sm-offset-2">
+<div class="container-fluid" style="margin-top:8px;">
+<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
 <div class="row" style="background-color:red;"> <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <center><img src='{% static 'vfabrika.png' %}' style="padding-top:5px;"><h3 style="margin-top:5px; margin-bottom:0px;"> "Veselības Fabrika" sporta klubs</center>
   <center><small>Latvija, Rīga, Brīvības gatve 214M, 3. kāpņu telpa, 2. stāvs, LV-1039</small></center></h3> </div></div><div class="row" style="background-color:#888;">
