--- a/grafiks/templates/day_header.html
+++ b/grafiks/templates/day_header.html
@@ -1,7 +1,7 @@
 {% extends 'admin.html' %}
 {% block style %}
-.nav-tabs > li > a{ color: #000; background-color:#ccc; border:solid #ccc 1px; }
-.nav-tabs > li > a:hover{ background-color: #888 !important; color:#fff; border:solid #ccc 1px; }
+.nav-tabs > li > a{ color: #000; background-color:#ccc; border:solid #bbb 1px; margin-top: 3px; border-radius: 0; min-width: 89px;}
+.nav-tabs > li > a:hover{ background-color: #888 !important; color:#fff; border:solid #aaa 1px; }
 
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {  background-color: #9b9da0; }
 {% endblock %}
